--- a/app.json
+++ b/app.json
@@ -1,21 +1,19 @@
 {
   "expo": {
-    "name": "riego-user-1",
-    "slug": "riego-user-1",
+    "name": "Riego",
+    "slug": "riego-user",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#121212"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
