--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/slider": "^3.0.3",
     "@react-native-picker/picker": "1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/material-bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "d3": "^7.0.0",
@@ -28,11 +29,14 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-calendars": "^1.1264.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-paper": "^4.9.2",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "victory-native": "^35.3.3"
   },
